clusters/homelab/apps/atuin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: atuin
  labels:
    gateway.infra.services/allow-routes: "true"
