clusters/homelab/apps/atuin/atuin.yaml
---
# atuin login -s https://atuin.overseer.work
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atuin
  namespace: atuin
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: atuin
  template:
    metadata:
      labels:
        io.kompose.service: atuin
    spec:
      containers:
        - args:
            - start
          image: ghcr.io/atuinsh/atuin:18.23.0
          name: atuin
          ports:
            - containerPort: 8888
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: /config
              name: atuin-claim0
      volumes:
        - name: atuin-claim0
          persistentVolumeClaim:
            claimName: atuin-claim0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: atuin
  name: atuin
  namespace: atuin
spec:
  ports:
    - name: "8888"
      port: 8888
  selector:
    io.kompose.service: atuin
