clusters/homelab/apps/atuin/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
  namespace: atuin
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
  "atuin.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: atuin
          port: 8888
